fixed canopy print view to not cut off scenarios
git-svn-id: http://svn.ccnmtl.columbia.edu/blackrock/trunk@14567 1f418930-7ff8-0310-b8ad-c653122473bc

--- a/respiration/media/css/style.css
+++ b/respiration/media/css/style.css
@@ -502,7 +502,11 @@ div#error
 	#equation { display: none; }
 	#tab-bar { display: none; }
 	#forestgraph { display: none; }
-	.speciescontainer,#scenariobox { max-height: 100%; }
+	.speciescontainer,#scenariobox {
+	  max-height: 100%;
+	  overflow:visible;
+	}
+	.scenario { padding-bottom: 50px; }
 	#scenarioheader { display: none; }
 	
 	.scenariotitle
